# ownserver

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
docs/: architecture.md  development_overview.md  flow.dio  sequence.md  tunnelto.dio  websocket.yml
ownserver/: Cargo.toml
ownserver/src/: api.rs  error.rs  lib.rs  local.rs  localudp.rs  main.rs  proxy_client.rs  recorder.rs
ownserver/src/local/: tcp.rs  udp.rs
ownserver_lib/: Cargo.toml
ownserver_lib/src/: lib.rs  reconnect.rs
ownserver_server/: Cargo.toml
ownserver_server/src/: client.rs  control_server.rs  control_server_v2.rs  lib.rs  main.rs  port_allocator.rs  proxy_server.rs  store.rs
ownserver_server/src/remote/: mod.rs  stream.rs  tcp.rs  udp.rs
ownserver_test/: Cargo.toml
ownserver_test/src/: lib.rs  ports.rs
ownserver_test/tests/: e2e_test.rs  lib.rs
ownserver_test/tests/server/: mod.rs  proxy_server_test.rs
proxy_client/: Cargo.toml
proxy_client/src/: error.rs  lib.rs  local.rs  localudp.rs  main.rs  proxy_client.rs
proxy_lib/: Cargo.toml
proxy_lib/src/: lib.rs
proxy_server/: Cargo.toml
proxy_server/src/: active_stream.rs  client.rs  connected_clients.rs  control_server.rs  lib.rs  main.rs  port_allocator.rs  proxy_server.rs  remote.rs  store.rs
proxy_server/src/remote/: stream.rs  tcp.rs  udp.rs
proxy_server/tests/: proxy_server_test.rs
proxy_test/: Cargo.toml
proxy_test/tests/: e2e_test.rs  e2e_udp_test.rs  integrated_test.rs  proxy_server_test.rs
proxy_test/tests/client/: local.rs  localudp.rs  mod.rs  proxy_client.rs
proxy_test/tests/server/: mod.rs  proxy_server_test.rs  proxy_server_udp_test.rs
src/: lib.rs  proxy_client.rs  proxy_server.rs
