[package]
name = "ownserver"
version = "0.6.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Expose your local game server to the Internet"
repository = "https://github.com/Kumassy/ownserver"
homepage = "https://github.com/Kumassy/ownserver"
readme = "../README.md"
categories = ["network-programming", "web-programming::websocket", "games"]
keywords = ["network", "networking", "game", "minecraft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ownserver_lib = { version = "0.6.0", path = "../ownserver_lib" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = '0.22', features = ["rustls"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
warp = "0.3"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6.1"
bytes = "1.9"
clap = { version = "4.4.2", features = ["derive"] }
chrono = { version="0.4.38" }

[[bin]]
name = "ownserver"
path = "src/main.rs"
