[package]
name = "ownserver_lib"
version = "0.4.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
base64 = "0.13"
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.1", features = ["v4", "serde"] }