[package]
name = "ownserver_lib"
version = "0.6.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Expose your local game server to the Internet"
repository = "https://github.com/Kumassy/ownserver"
homepage = "https://github.com/Kumassy/ownserver"
readme = "../README.md"
categories = ["network-programming", "web-programming::websocket", "games"]
keywords = ["network", "networking", "game", "minecraft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
base64 = "0.13"
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.1", features = ["v4", "serde"] }
tokio-util = "0.7.8"
bytes = "1.0"