[package]
name = "ownserver_server"
version = "0.4.1"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ownserver_lib = { version = "0.4.0", path = "../ownserver_lib" }
ownserver = { version = "0.4.0", path = "../ownserver" }
tokio-tungstenite = { version = '0.14', features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.8"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"]}
tracing-opentelemetry = "0.17"
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"]}
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
warp = "0.3"
lazy_static = "1.4"
base64 = "0.13"
dashmap = "4.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.3" }
once_cell = "1.8"
chrono = "0.4"
structopt = "0.3.25"
metrics = "0.19.0"
metrics-exporter-prometheus = "0.10.0"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "*"

[[bin]]
name = "ownserver-server"
path = "src/main.rs"