[package]
name = "ownserver_server"
version = "0.6.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ownserver_lib = { version = "0.6.0", path = "../ownserver_lib" }
ownserver = { version = "0.6.0", path = "../ownserver" }
tokio-tungstenite = { version = '0.17', features = ["rustls"] }
tokio = { version = "1.21", features = ["full", "tracing"] }
tokio-util = "0.7"
console-subscriber = "0.1.7"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"]}
tracing-opentelemetry = "0.21"
warp = "0.3"
base64 = "0.13"
dashmap = "5.3"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
ownserver-auth = { git = "https://github.com/Kumassy/ownserver-auth.git", branch = "main", version = "0.2.0" }
once_cell = "1.8"
chrono = "0.4"
structopt = "0.3.25"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "*"

[[bin]]
name = "ownserver-server"
path = "src/main.rs"