[package]
name = "magic_tunnel_client"
version = "0.1.2"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic_tunnel_lib = { version = "0.1.1", path = "../proxy_lib" }
tokio-tungstenite = { version = '0.14', features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.8"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"
lazy_static = "1.4"
base64 = "0.13"
thiserror = "1.0"
magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.1" }

[dev-dependencies]
serial_test = "*"

[[bin]]
name = "proxy-client"
path = "src/main.rs"