[package]
name = "magic_tunnel_client"
version = "0.4.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic_tunnel_lib = { version = "0.4.0", path = "../proxy_lib" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.8"
tokio-tungstenite = { version = '0.14', features = ["rustls"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
lazy_static = "1.4"
warp = "0.3"
thiserror = "1.0"
structopt = "0.3.25"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "4.0"

[[bin]]
name = "proxy-client"
path = "src/main.rs"