[package]
name = "magic_tunnel_lib"
version = "0.1.1"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
rand = "0.8"
sha2 = "0.9"